# FDSolverPy

./: .gitignore  README.md  requirements.txt  run.py  setup.cfg
base/: ParallelSolver.py
diffusion/: DiffSolver.py  run_diffusion.py
math/: space.py
src/FDSolverPy/base/: ParallelSolver.py
src/FDSolverPy/diffusion/: DiffSolver.py  DiffSolver_pbc.py  helper.py
src/FDSolverPy/math/: convolve.py  space.py  space_jax.py  util.py
src/FDSolverPy/tools/: build_microstructure.py  plot_scripts.py
src/fdsolverpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/2d/homo_linear/: plot.py
tests/2d/homo_linear/Q_0/: C.npz  diff_solver.pckl
tests/2d/homo_linear/Q_1/: C.npz  D.npz
tests/2d/homo_sinusoid/: c_1.npy  plot.py
tests/2d/homo_sinusoid/Q_0/: C.npz  diff_solver.pckl
tests/2d/homo_sinusoid/Q_1/: C.npz  D.npz
tests/2d/microstruct/: plot.py  run.py
tests/2d/microstruct/Q_0/: C.npz  D.npz  diff_solver.pckl
tests/2d/microstruct/Q_1/: C.npz
tests/3d/microstruct/: effective_d.py  run.py
tests/3d/microstruct/Q_0/: C.npz  D.npz  diff_solver.pckl
tests/3d/microstruct/Q_1/: C.npz
tests/3d/microstruct/Q_2/: C.npz
tests/cluster/microstruct/: build_inputs.py  run_local.py
tests/cluster/microstruct/nonpbc/: post_process.py  run_cluster.py
tests/cluster/microstruct/pbc/: build_inputs.py  post_process.py  run_cluster.py
tests/local/2d/homo_linear/: plot.py  run.py
tests/local/2d/homo_sinusoid/: c_0.npy  run.py
tests/local/2d/microstruct/: plot.py  run.py
tests/local/notebook/: demo.ipynb
tools/: job_scripts.py  plot_scripts.py
(+92 files in other folders)
