[metadata]
name = fdsolverpy
version = 0.0.1
author = Henry Yu
author_email = yu39@llnl.gov
description = simple parallelized finite difference solver package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://lc.llnl.gov/gitlab/yu39/fdsolverpy

[option]
package_dir=
    =src
packages=find:
python_requires = >= 3.7
install_requires =

[options.packages.find]
where=src
